[gd_scene load_steps=14 format=2]

[ext_resource path="res://talkto.gd" type="Script" id=1]
[ext_resource path="res://chars/ghosts/qyllia-calm.png" type="Texture" id=2]

[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
flags_unshaded = true
flags_albedo_tex_force_srgb = true
params_diffuse_mode = 4
params_specular_mode = 3
params_cull_mode = 2
params_billboard_mode = 1

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.16, 0.1, 0.16 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.48, 0.1, 0.32 )

[sub_resource type="Animation" id=5]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0.03, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.508571, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
trail_divisor = 2
emission_shape = 2
emission_box_extents = Vector3( 0.1, 0.1, 0.1 )
flag_disable_z = true
gravity = Vector3( 0, 0.2, 0 )
initial_velocity_random = 1.0
angular_velocity = 1.77965e-43
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 0.01
damping = 0.1
color_ramp = SubResource( 7 )

[sub_resource type="SpatialMaterial" id=9]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_depth_draw_mode = 2
params_billboard_mode = 1
albedo_color = Color( 0.854902, 1, 0.996078, 1 )

[sub_resource type="QuadMesh" id=10]
material = SubResource( 9 )
size = Vector2( 0.02, 0.02 )

[sub_resource type="BoxShape" id=11]
extents = Vector3( 0.16, 0.1, 0.16 )

[node name="ghost" type="KinematicBody" groups=[
"ghost",
]]
transform = Transform( 1.5625, 0, 0, 0, 1.5625, 0, 0, 0, 1.5625, 0, 1, 0 )
script = ExtResource( 1 )
ghost = true

[node name="Sprite3D" type="AnimatedSprite3D" parent="."]
material_override = SubResource( 1 )
offset = Vector2( 0, 32 )
opacity = 0.912008
frames = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.64, 0 )
shape = SubResource( 3 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.64, -0.16 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "float"
anims/float = SubResource( 5 )

[node name="Particles" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )
amount = 12
lifetime = 4.0
randomness = 1.0
process_material = SubResource( 8 )
draw_pass_1 = SubResource( 10 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.16, 0 )
light_color = Color( 0.0103221, 0.0103221, 0.0103221, 1 )
light_energy = 0.3
light_indirect_energy = 0.3
shadow_enabled = true

[node name="Area2" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.64, 0.48 )
shape = SubResource( 11 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="body_entered" from="Area2" to="." method="_on_Area2_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer2" to="." method="_on_AnimationPlayer2_animation_finished"]
